--- a/style.css
+++ b/style.css
@@ -94,8 +94,23 @@ color: #252F65;
 }
 .main-header2{
     display: flex;
-    align-items: center;
     justify-content: space-between;
     padding-top: 50px;
-    
+}
+
+.main-page{
+    display: flex;
+    flex-direction: line;
+    align-content: right;
+}
+
+.main-page-description{
+display: flex;
+flex-direction: column;
+font-family: 'Merriweather';
+font-style: normal;
+font-weight: 900;
+font-size: 35px;
+text-align: center;
+color: rgba(37, 47, 101, 1);
 }
